# opencv-8ball

./: LICENSE  README.md  README.txt  Untitled.rtf  dddd  pkg-config.txt  ssssssssssss.xlsx
ALB/FinalProject/: CMakeLists.txt
CV_FinalProject/: CMakeLists.txt  README.txt
CV_FinalProject/include/: frameHandler.h  metrics.h  videoHandler.h
CV_FinalProject/src/: ballDetection.cpp  frameHandler.cpp  main.cpp  videoHandler.cpp
ELE/FinalProject_alb/: CVproject  metrics
Final Proj/FinalProject/: main
FinalProject/: CMakeLists.txt  ballDetection.h  fieldDetection.h
FinalProject/src/: fieldDetection.cpp  fieldDetection_sofia.cpp  main_ele.cpp
Lab 1  Intro to OpenCV, pix manipulation, transformations-20240312/: task1.cpp
Lab 2  Filters and histogram equalization-20240318/: ImageFilters.h  task1.cpp  task2.cpp  task4.cpp  task5.cpp  task6.cpp
Lab 3 Mouse callback and color segmentation-20240325/: task2.cpp  task3.cpp  task6.cpp
Lab 4  Edge and line detection-20240408-20240414T204120Z-001/: task1.cpp  task3.cpp
Lab 6 Image matching-20240422(1)/: task1
Lab 7 Image stitching-20240506/include/: img_stitching.cpp  img_stitching.h
SCARAMANZIA/FinalProject/: README.txt
SOF/FinalProject/: main
SOFIA/FinalProject/: main
lab_albertomorsels/: README.md  VMware Horizon Client.lnk  prenotazione.url
lab_albertomorsels/Lab 2  Filters and histogram equalization-20240318/: ImageFilters.cpp  (+1 more)
report/: report_lab3_morselli_alberto.docx  report_lab5_morselli_alberto.docx  report_lab7_morselli_alberto.docx
stuff/: contr  hist.cpp  mat  mat.cpp  scan  shaded.cpp
(+106 files in other folders)
